--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "util": "^0.12.5"
   }
 }
