--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix"
+
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,9 @@
   "homepage": "https://github.com/Zeronicc/To-Do-List#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
